change db database.yml

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -1,3 +1,5 @@
 POSTGRES_USER: "postgres"
 POSTGRES_PASSWORD: "postgres"
-THE_MOVIE_DB_TOKEN: "your_api_auth_header_token"
+POSTGRES_HOST: "localhost"
+THE_MOVIE_DB_TOKEN: "your_api_token"
+SECRET_KEY_BASE: 'secure123'
